moved assets to assets folder

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
-    <link rel="icon" href="title_icon.png">
+    <link rel="icon" href="assets/title_icon.png">
 </head>
 
 <body>
@@ -16,13 +16,13 @@
         <tr>
             <td>
                 <a href="tel:08069878321" target="_blank">
-                    <img src="phone.png" alt="Phone icon" height="15px">
+                    <img src="assets/phone.png" alt="Phone icon" height="15px">
                     08069878321
                 </a>
             </td>
             <td align="right">
                 <a href="mailto:hello@thetapacademy.com" target="_blank">
-                    <img src="email.png" alt="Email icon" height="15px">
+                    <img src="assets/email.png" alt="Email icon" height="15px">
                     hello@thetapacademy.com
                 </a> &nbsp; &nbsp;
                 <a href="https://www.youtube.com/tapacademy" target="_blank">
@@ -53,7 +53,7 @@
         <tr align="center">
             <td align="left">
                 <a href="index.html">
-                    <img src="the-tap-academy-logo-01.png" alt="Tap Academy" height="50px">
+                    <img src="assets/the-tap-academy-logo-01.png" alt="Tap Academy" height="50px">
             </td>
             <td>
                 <a href="index.html">HOME</a>
@@ -90,53 +90,53 @@
         </colgroup>
         <tr>
             <td bgcolor="white">
-                <center><img src="b1.svg" alt="" height="200px" width="200px"></center>
+                <center><img src="assets/b1.svg" alt="" height="200px" width="200px"></center>
                 <font size="5px" color="3085C3" face="monospace"><b>Features of Java Explained</b></font><br><br>
                 <font face="serif" size="3px">The popular programming language Java has been around for more than 20
                     years. Its popularity can be attributed to, among other things, its portability, security</font>
                 <br><br>
                 <form action="https://thetapacademy.com/features-of-java/" target="_blank"><button>
-                        <font size="3px" color="3085C3" face="monospace"><b>Read More <img src="read.png" alt=""
+                        <font size="3px" color="3085C3" face="monospace"><b>Read More<img src="assets/read.png" alt=""
                                     height="10px"></b></font>
                     </button></form>
             </td>
             <td bgcolor="white">
-                <center><img src="b2.svg" alt="" height="200px" width="200px"></center>
+                <center><img src="assets/b2.svg" alt="" height="200px" width="200px"></center>
                 <font size="5px" color="3085C3" face="monospace"><b>What is Java?</b></font><br><br>
                 <font face="serif" size="3px">A well-liked and frequently used high-level programming language is Java.
                     Since its initial release by Sun Microsystems in 1995, it has grown to rank among</font>
                 <br><br>
                 <form action="https://thetapacademy.com/what-is-java/" target="_blank"><button>
-                        <font size="3px" color="3085C3" face="monospace"><b>Read More <img src="read.png" alt=""
+                        <font size="3px" color="3085C3" face="monospace"><b>Read More<img src="assets/read.png" alt=""
                                     height="10px"></b></font>
                     </button></form>
             </td>
             <td bgcolor="white">
-                <center><img src="b3.svg" alt="" height="200px" width="200px"></center>
+                <center><img src="assets/b3.svg" alt="" height="200px" width="200px"></center>
                 <font size="5px" color="3085C3" face="monospace"><b>What is a Full Stack Developer?</b></font><br><br>
                 <font face="serif" size="3px">A software engineer that is proficient in both front-end and back-end
                     programming is known as a full-stack developer. They have experience dealing with a </font>
                 <br><br>
                 <form action="https://thetapacademy.com/full-stack-developer/" target="_blank"><button>
-                        <font size="3px" color="3085C3" face="monospace"><b>Read More <img src="read.png" alt=""
+                        <font size="3px" color="3085C3" face="monospace"><b>Read More<img src="assets/read.png" alt=""
                                     height="10px"></b></font>
                     </button></form>
             </td>
         <tr>
             <td bgcolor="white">
-                <center><img src="b4.svg" alt="" height="200px" width="200px"></center>
+                <center><img src="assets/b4.svg" alt="" height="200px" width="200px"></center>
                 <font size="5px" color="3085C3" face="monospace"><b>What is Data Structure and Algorithm?</b></font>
                 <br><br>
                 <font face="serif" size="3px">You may already know that computers are used to store and modify massive
                     amounts of data. Data structures are used to efficiently and conveniently arrange</font>
                 <br><br>
                 <form action="https://thetapacademy.com/what-is-data-structure-and-algorithm/" target="_blank"><button>
-                        <font size="3px" color="3085C3" face="monospace"><b>Read More <img src="read.png" alt=""
+                        <font size="3px" color="3085C3" face="monospace"><b>Read More<img src="assets/read.png" alt=""
                                     height="10px"></b></font>
                     </button></form>
             </td>
             <td bgcolor="white">
-                <center><img src="b5.svg" alt="" height="200px" width="200px"></center>
+                <center><img src="assets/b5.svg" alt="" height="200px" width="200px"></center>
                 <font size="5px" color="3085C3" face="monospace"><b>How to Build Logic in Programming?</b></font>
                 <br><br>
                 <font face="serif" size="3px">Understanding Logic in Programming In order to solve problems in a
@@ -144,19 +144,19 @@
                     solutions</font>
                 <br><br>
                 <form action="https://thetapacademy.com/how-to-build-logic-in-programming/" target="_blank"><button>
-                        <font size="3px" color="3085C3" face="monospace"><b>Read More <img src="read.png" alt=""
+                        <font size="3px" color="3085C3" face="monospace"><b>Read More<img src="assets/read.png" alt=""
                                     height="10px"></b></font>
                     </button></form>
             </td>
             <td bgcolor="white">
-                <center><img src="b6.svg" alt="" height="200px" width="200px"></center>
+                <center><img src="assets/b6.svg" alt="" height="200px" width="200px"></center>
                 <font size="5px" color="3085C3" face="monospace"><b>Database Developer Salary in 2023</b></font><br><br>
                 <font face="serif" size="3px">Most engineering professionals and graduates are frequently unsure of the
                     salary they need to demand from potential companies. Here, we’ve attempted to accurately represent
                     the </font>
                 <br><br>
                 <form action="https://thetapacademy.com/database-developer-salary-in-2023/" target="_blank"><button>
-                        <font size="3px" color="3085C3" face="monospace"><b>Read More <img src="read.png" alt=""
+                        <font size="3px" color="3085C3" face="monospace"><b>Read More<img src="assets/read.png" alt=""
                                     height="10px"></b></font>
                     </button></form>
             </td>
@@ -182,36 +182,36 @@
                     <tr>
                         <td>
                             <a href="https://www.facebook.com/thetapacademy" target="_blank">
-                                <img src="facebook.png" alt="" width="50px"> </a>
+                                <img src="assets/facebook.png" alt="" width="50px"> </a>
                         </td>
                         <td>
                             <a href="https://www.youtube.com/channel/UCvT21bzLRHrnAc-F1SRqRSw" target="_blank">
-                                <img src="youtube.svg" alt="" width="50px"> </a>
+                                <img src="assets/youtube.svg" alt="" width="50px"> </a>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <a href="https://www.instagram.com/tapacademy.online?igshid=MzRlODBiNWFlZA%3D%3D"
                                 target="_blank">
-                                <img src="instagram-logo.svg" alt="" width="50px"> </a>
+                                <img src="assets/instagram-logo.svg" alt="" width="50px"> </a>
                         </td>
                         <td>
                             <a href="https://www.linkedin.com/company/thetapacademy/" target="_blank">
-                                <img src="linkedin.png" alt="" width="50px"> </a>
+                                <img src="assets/linkedin.png" alt="" width="50px"> </a>
                         </td>
                     </tr>
                 </table>
             </td>
         </tr>
         <tr align="center">
-            <td><img src="location.png" alt="" height="20px">
+            <td><img src="assets/location.png" alt="" height="20px">
                 <a href="https://www.google.com/maps/place/TAP+Academy+BTM/@12.9163145,77.6106318,17z/data=!3m1!4b1!4m6!3m5!1s0x3bae3d6411bbb945:0x884e5e751a18bc1!8m2!3d12.9163145!4d77.6106318!16s%2Fg%2F11rd5h21qx?entry=ttu"
                     target="_blank">BTM</a>
             </td>
             <td><a href="index.html">Home</a></td>
         </tr>
         <tr align="center">
-            <td><img src="location.png" alt="" height="20px">
+            <td><img src="assets/location.png" alt="" height="20px">
                 <a href="https://www.google.com/maps/place/Tap+Academy+-+Rajajinagar/@12.9918022,77.5567683,17z/data=!3m1!4b1!4m6!3m5!1s0x3bae3dd04c97b969:0xb9919df007104d14!8m2!3d12.9918022!4d77.5567683!16s%2Fg%2F11v0jvl9x3?entry=ttu"
                     target="_blank">Rajajinagar</a>
             </td>
@@ -219,14 +219,14 @@
         </tr>
         <tr align="center">
             <td><a href="tel:08069878321" target="_blank">
-                    <img src="phone.png" alt="Phone icon" height="15px">
+                    <img src="assets/phone.png" alt="Phone icon" height="15px">
                     08069878321
                 </a></td>
             <td><a href="review.html">Student Reviews</a></td>
         </tr>
         <tr align="center">
             <td><a href="mailto:hello@thetapacademy.com" target="_blank">
-                    <img src="email.png" alt="Email icon" height="15px">
+                    <img src="assets/email.png" alt="Email icon" height="15px">
                     hello@thetapacademy.com
                 </a></td>
             <td><a href="blog.html">Blogs</a></td>
