--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="icon" href="title_icon.png">
+    <link rel="icon" href="assets/title_icon.png">
 </head>
 
 <body>
@@ -15,13 +15,13 @@
         <tr>
             <td>
                 <a href="tel:08069878321" target="_blank">
-                    <img src="phone.png" alt="Phone icon" height="15px">
+                    <img src="assets/phone.png" alt="Phone icon" height="15px">
                     08069878321
                 </a>
             </td>
             <td align="right">
                 <a href="mailto:hello@thetapacademy.com" target="_blank">
-                    <img src="email.png" alt="Email icon" height="15px">
+                    <img src="assets/email.png" alt="Email icon" height="15px">
                     hello@thetapacademy.com
                 </a> &nbsp; &nbsp;
                 <a href="https://www.youtube.com/tapacademy" target="_blank">
@@ -52,7 +52,7 @@
         <tr align="center">
             <td align="left">
                 <a href="index.html">
-                    <img src="the-tap-academy-logo-01.png" alt="Tap Academy" height="50px">
+                    <img src="assets/the-tap-academy-logo-01.png" alt="Tap Academy" height="50px">
             </td>
             <td>
                 <a href="index.html">HOME</a>
@@ -93,26 +93,26 @@
                 <form action="end.html">
 
                     <label for="name">
-                        <font size="4.5px" face="Gill sans">Name</font> <sup><img src="asterisk.png" alt=""
+                        <font size="4.5px" face="Gill sans">Name</font> <sup><img src="assets/asterisk.png" alt=""
                                 height="10px"></sup>
                     </label><br>
                     <input type="text" id="name" name="name" placeholder="Name" required>
 
                     <label for="email">
-                        <font size="4.5px" face="Gill sans"><br><br>Email</font> <sup><img src="asterisk.png" alt=""
-                                height="10px"></sup>
+                        <font size="4.5px" face="Gill sans"><br><br>Email</font> <sup><img src="assets/asterisk.png"
+                                alt="" height="10px"></sup>
                     </label><br>
                     <input type="email" id="email" name="email" placeholder="Email" required>
 
                     <label for="num">
-                        <font size="4.5px" face="Gill sans"><br><br>Number</font> <sup><img src="asterisk.png" alt=""
-                                height="10px"></sup>
+                        <font size="4.5px" face="Gill sans"><br><br>Number</font> <sup><img src="assets/asterisk.png"
+                                alt="" height="10px"></sup>
                     </label><br>
                     <input type="text" id="num" name="num" placeholder="Enter your number" pattern="[6-9]{1}[0-9]{9}"
                         required>
                     <label for="msg">
-                        <font size="4.5px" face="Gill sans"><br><br>Message</font> <sup><img src="asterisk.png" alt=""
-                                height="10px"></sup>
+                        <font size="4.5px" face="Gill sans"><br><br>Message</font> <sup><img src="assets/asterisk.png"
+                                alt="" height="10px"></sup>
                     </label><br>
                     <textarea id="msg" name="msg" placeholder="Message" required cols="30" rows="5"></textarea><br><br>
                     <button>
@@ -160,36 +160,36 @@
                     <tr>
                         <td>
                             <a href="https://www.facebook.com/thetapacademy" target="_blank">
-                                <img src="facebook.png" alt="" width="50px"> </a>
+                                <img src="assets/facebook.png" alt="" width="50px"> </a>
                         </td>
                         <td>
                             <a href="https://www.youtube.com/channel/UCvT21bzLRHrnAc-F1SRqRSw" target="_blank">
-                                <img src="youtube.svg" alt="" width="50px"> </a>
+                                <img src="assets/youtube.svg" alt="" width="50px"> </a>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <a href="https://www.instagram.com/tapacademy.online?igshid=MzRlODBiNWFlZA%3D%3D"
                                 target="_blank">
-                                <img src="instagram-logo.svg" alt="" width="50px"> </a>
+                                <img src="assets/instagram-logo.svg" alt="" width="50px"> </a>
                         </td>
                         <td>
                             <a href="https://www.linkedin.com/company/thetapacademy/" target="_blank">
-                                <img src="linkedin.png" alt="" width="50px"> </a>
+                                <img src="assets/linkedin.png" alt="" width="50px"> </a>
                         </td>
                     </tr>
                 </table>
             </td>
         </tr>
         <tr align="center">
-            <td><img src="location.png" alt="" height="20px">
+            <td><img src="assets/location.png" alt="" height="20px">
                 <a href="https://www.google.com/maps/place/TAP+Academy+BTM/@12.9163145,77.6106318,17z/data=!3m1!4b1!4m6!3m5!1s0x3bae3d6411bbb945:0x884e5e751a18bc1!8m2!3d12.9163145!4d77.6106318!16s%2Fg%2F11rd5h21qx?entry=ttu"
                     target="_blank">BTM</a>
             </td>
             <td><a href="index.html">Home</a></td>
         </tr>
         <tr align="center">
-            <td><img src="location.png" alt="" height="20px">
+            <td><img src="assets/location.png" alt="" height="20px">
                 <a href="https://www.google.com/maps/place/Tap+Academy+-+Rajajinagar/@12.9918022,77.5567683,17z/data=!3m1!4b1!4m6!3m5!1s0x3bae3dd04c97b969:0xb9919df007104d14!8m2!3d12.9918022!4d77.5567683!16s%2Fg%2F11v0jvl9x3?entry=ttu"
                     target="_blank">Rajajinagar</a>
             </td>
@@ -197,14 +197,14 @@
         </tr>
         <tr align="center">
             <td><a href="tel:08069878321" target="_blank">
-                    <img src="phone.png" alt="Phone icon" height="15px">
+                    <img src="assets/phone.png" alt="Phone icon" height="15px">
                     08069878321
                 </a></td>
             <td><a href="review.html">Student Reviews</a></td>
         </tr>
         <tr align="center">
             <td><a href="mailto:hello@thetapacademy.com" target="_blank">
-                    <img src="email.png" alt="Email icon" height="15px">
+                    <img src="assets/email.png" alt="Email icon" height="15px">
                     hello@thetapacademy.com
                 </a></td>
             <td><a href="blog.html">Blogs</a></td>
