--- a/end.html
+++ b/end.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You</title>
-    <link rel="icon" href="title_icon.png">
+    <link rel="icon" href="assets/title_icon.png">
 </head>
 
 <body bgcolor="C5DFF8">
@@ -14,7 +14,7 @@
 
     <br><br><br><br><br><br><br>
     <center>
-        <img src="tk.png" alt="THANK YOU" height="300px" width="500"><br><br><br><br>
+        <img src="assets/tk.png" alt="THANK YOU" height="300px" width="500"><br><br><br><br>
         <img src="https://ouch-cdn2.icons8.com/Dibzjk9IaKkXuAwwj2Uu6oDn5jaK2kKded-h6WkKGsc/rs:fit:368:368/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvMzYv/ZmY5ZDA3YzYtZGM3/Yi00Y2I3LWExNzct/OGM3ZGI0Y2RiNWI4/LnBuZw.png"
             alt="" height="300px">
     </center>
