--- a/fswb_register.html
+++ b/fswb_register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="icon" href="title_icon.png">
+    <link rel="icon" href="assets/title_icon.png">
 </head>
 
 <body>
@@ -28,21 +28,21 @@
                 <form action="end.html">
 
                     <label for="name">
-                        <font size="4px" face="Gill sans" color="white">Name</font> <sup><img src="asterisk.png" alt=""
-                                height="10px"></sup>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <font size="4px" face="Gill sans" color="white">Name</font> <sup><img src="assets/asterisk.png"
+                                alt="" height="10px"></sup>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </label>
                     <input type="text" id="name" name="name" placeholder="Name" required>
 
                     <label for="email">
-                        <font size="4px" face="Gill sans" color="white"><br><br>Email</font> <sup><img
-                                src="asterisk.png" alt=""
+                        <font size="4px" face="Gill sans" color="white"><br><br>Email</font> <sup>
+                            <img src="assets/asterisk.png" alt=""
                                 height="10px"></sup>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </label>
                     <input type="email" id="email" name="email" placeholder="Email" required>
 
                     <label for="num">
-                        <font size="4px" face="Gill sans" color="white"><br><br>Number</font> <sup><img
-                                src="asterisk.png" alt="" height="10px"></sup>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <font size="4px" face="Gill sans" color="white"><br><br>Number</font> <sup>
+                            <img src="assets/asterisk.png" alt="" height="10px"></sup>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </label>
                     <input type="text" id="num" name="num" placeholder="Enter your number" pattern="[6-9]{1}[0-9]{9}"
                         required>
