updated index file

--- a/index.html
+++ b/index.html
@@ -272,14 +272,15 @@
                         </td>
                         <td>
                             <a href="https://www.youtube.com/channel/UCvT21bzLRHrnAc-F1SRqRSw" target="_blank">
-                                <img src="assets/youtube.svg" alt="" width="50px"> </a>
+                                <img src="https://www.svgrepo.com/download/13671/youtube.svg" alt="" width="50px"> </a>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <a href="https://www.instagram.com/tapacademy.online?igshid=MzRlODBiNWFlZA%3D%3D"
                                 target="_blank">
-                                <img src="assets/instagram-logo.svg" alt="" width="50px"> </a>
+                                <img src="https://www.svgrepo.com/show/364604/instagram-logo-fill.svg" alt=""
+                                    width="50px"> </a>
                         </td>
                         <td>
                             <a href="https://www.linkedin.com/company/thetapacademy/" target="_blank">
