Updated landing page

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 
     <center>
         <!-- C58940 F39422-->
-        <font face="Tahoma" size="7px" color="0A4D68">Experience the <font color="F39422">Augmented
-                Reality</font> Tech Training</font> <br><br><br>
+        <font face="monospace" size="7px" color="0A4D68"><b>Experience the <font color="F39422">Augmented
+                    Reality</font> Tech Training</b></font> <br><br><br>
         &nbsp;&nbsp;&nbsp;
         <font size="5px" face="serif">One of the Unique features of Tap Academy is the use of Augmented
             Reality in our
@@ -244,6 +244,30 @@
             </td>
             <td><br>
                 <font face="Courier" size="4px">Placement Drives</font>
+            </td>
+        </tr>
+    </table><br><br><br>
+
+    <center>
+        <font face="monospace" size="7px" color="0A4D68"><b>Our <font color="F39422">Team</font></b></font>
+    </center>
+
+    <table widh="75%" cellspacing="30" align="center">
+        <tr align="center">
+            <td>
+                <img src="assets/img1.jpeg" alt="" height="300px"><br>
+                <font face="monospace" size="5px"><b>Rohith Ravinder</b></font><br>
+                <font face="serif">Founder & CEO</font>
+            </td>
+            <td>
+                <img src="assets/img2.png" alt="" height="300px"><br>
+                <font face="monospace" size="5px"><b>Rakshit Shetty</b></font><br>
+                <font face="serif">Co-Founder & COO</font>
+            </td>
+            <td>
+                <img src="assets/img3.png" alt="" height="300px"><br>
+                <font face="monospace" size="5px"><b>Somanna</b></font><br>
+                <font face="serif">Co-Founder & Instructor</font>
             </td>
         </tr>
     </table><br><br>
@@ -330,6 +354,7 @@
             <td><br></td>
         </tr>
     </table>
+
 
 </body>
 
