--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tap Acadademy</title>
+    <title>Tap Academy</title>
     <link rel="icon" href="assets/title_icon.png">
 
 </head>
