--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     hello@thetapacademy.com
                 </a> &nbsp; &nbsp;
                 <a href="https://www.youtube.com/tapacademy" target="_blank">
-                    <u><img src="https://www.svgrepo.com/download/13671/youtube.svg" alt="Youtube icon"
-                            height="22px"></u>
+                    <img src="https://www.svgrepo.com/download/13671/youtube.svg" alt="Youtube icon" height="22px"></u>
                 </a> &nbsp; &nbsp;
                 <a href="https://www.instagram.com/tapacademy.online?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank">
                     <img src="https://www.svgrepo.com/show/364604/instagram-logo-fill.svg" alt="Instagram icon"
